# mpi-integration

./: .gitignore  CMakeLists.txt  README.md  crunching.cpp  crunching.h  main  main.cpp  range.cpp  range.h  report.ipynb  report.md  result.h  utils.cpp  utils.h
src/: crunching.h  main.cpp  range.cpp  range.h  utils.h
